choose time signature

--- a/Violapp/app/src/main/res/values/strings.xml
+++ b/Violapp/app/src/main/res/values/strings.xml
@@ -10,4 +10,20 @@
     <string name="equal">=</string>
     <string name="bpm">BPM</string>
     <string name="default_tempo_term">Adagio</string>
+    <string name="not_supported_yet">Not supported, yet</string>
+
+    <integer-array name="time_signature">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+    </integer-array>
 </resources>
