save mute state and wrap sharepref to a class

--- a/Violapp/app/src/main/res/values/strings.xml
+++ b/Violapp/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Violapp</string>
     <string name="shared_tempo">shared tempo</string>
     <string name="shared_time_signature">shared time signature</string>
+    <string name="shared_mute_state">shared mute state</string>
     <string name="tempo">TEMPO</string>
     <string name="default_tempo_60">60</string>
     <string name="increase_tempo">increase tempo</string>
