--- a/Violapp/app/src/main/res/values/strings.xml
+++ b/Violapp/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     </integer-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="scale_all_notes">Scale: All notes</string>
+    <string name="choose_scale">Choose Scale</string>
+    <string name="first_position">First Position</string>
+    <string name="note_images">note images</string>
 </resources>
