--- a/Violapp/app/src/main/res/values/strings.xml
+++ b/Violapp/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="shared_tempo">shared tempo</string>
     <string name="shared_time_signature">shared time signature</string>
     <string name="shared_mute_state">shared mute state</string>
+    <string name="shared_scale">shared scale</string>
 
     <integer-array name="time_signature">
         <item>1</item>
@@ -30,8 +31,7 @@
         <item>11</item>
         <item>12</item>
     </integer-array>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="scale_all_notes">Scale: All notes</string>
     <string name="choose_scale">Choose Scale</string>
     <string name="first_position">First Position</string>
